<resources>
    <string name="app_name">App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="title_text">My Apps</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_bigger">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="capstone">CAPSTONE</string>
</resources>
