<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#64B5F6">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_text"
        android:id="@+id/titleText"
        android:textSize="30sp"
        android:textColor="#E3F2FD"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp" />

    <Button
        android:layout_width="250sp"
        android:layout_height="55sp"
        android:text="@string/spotify_streamer"
        android:id="@+id/button"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/titleText"
        android:layout_centerHorizontal="true"
        android:onClick="spotifyMsg"
        android:focusable="false"
        android:background="#BBDEFB" />

    <Button
        android:layout_width="250sp"
        android:layout_height="55sp"
        android:text="@string/scores_app"
        android:id="@+id/button2"
        android:background="#BBDEFB"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="scoresMsg"/>

    <Button
        android:layout_width="250sp"
        android:layout_height="55sp"
        android:text="@string/library_app"
        android:id="@+id/button3"
        android:layout_marginTop="10dp"
        android:background="#BBDEFB"
        android:layout_below="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:onClick="libraryMsg"/>

    <Button
        android:layout_width="250sp"
        android:layout_height="55sp"
        android:text="@string/build_bigger"
        android:id="@+id/button4"
        android:background="#BBDEFB"
        android:layout_below="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:layout_marginTop="10dp"
        android:onClick="buildMsg"/>

    <Button
        android:layout_width="250sp"
        android:layout_height="55sp"
        android:text="@string/xyz_reader"
        android:id="@+id/button5"
        android:background="#BBDEFB"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:onClick="xyzMsg" />

    <Button
        android:layout_width="250sp"
        android:layout_height="55sp"
        android:text="@string/capstone"
        android:id="@+id/button6"
        android:background="#1E88E5"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="#E3F2FD"
        android:onClick="capstoneMsg"/>

</RelativeLayout>
